--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,15 @@
     "react-app-polyfill": "^0.2.2",
     "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.6.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^13.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,5 +36,10 @@
     "not dead",
     "not ie < 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
+  }
 }
