--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,20 @@
+# pull oficial base image
 FROM node:17.6.0
 
+# set working dir
 WORKDIR /app
+
+# add `/app/node_modules/.bin` to $PATH
+ENV PATH /app/node_modules/.bin:$PATH
+
+# install app dependencies
 COPY package.json ./
 COPY package-lock.json ./
-
 RUN npm install
+RUN npm install react-scripts@5.0.1 -g
 
+# add app
 COPY . ./
 
-
+# stat app
 CMD ["npm", "start"]
