--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
-version: "2"
+version: "3.7"
 
 services:
   app:
     restart: always
-    build: ./frontend
-    container_name: node-app
+    build: 
+      context: ./frontend
+      dockerfile: ./Dockerfile
+    container_name: react-app
     command: ["npm", "start"]
     volumes:
-      - ./frontend:/usr/src/app
-      - /usr/src/app/node_modules
-    expose:
-      - "3000"
+      - .:/app
+      - .:/app/node_modules
+    ports:
+      - 3001:3000
     stdin_open: true
     tty: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
